--- a/templates/base2.html
+++ b/templates/base2.html
@@ -59,7 +59,7 @@
 
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
-        <h1><a href="/">WeCanDO<span>Lab</span></a></h1>
+        <h1><a href="/">Elevate<span>UP</span></a></h1>
         
       </div>
 
